# PlayerVox-OverCrow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  about.toml  deny.toml
.github/workflows/: ci.yml
assets/branding/: NotoSans-OFL.txt
crates/overcrow-config/: Cargo.toml
crates/overcrow-control/: Cargo.toml
crates/overcrow-control-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/overcrow-control-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/overcrow-control-ui/src-tauri/capabilities/: default.json
crates/overcrow-control-ui/src-tauri/src/: commands.rs  main.rs  single_instance.rs  tray.rs  tray_tests.rs
crates/overcrow-control/src/: app.rs  app_tests.rs  commands.rs  compatibility.rs  compatibility_tests.rs  diagnostics.rs  diagnostics_tests.rs  integration.rs  integration_tests.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  model.rs  model_tests.rs  presentation.rs  presentation_tests.rs  settings_diagnostic.rs  settings_diagnostic_tests.rs  steam.rs  steam_tests.rs
crates/overcrow-control/tests/fixtures/steam/root/steamapps/: appmanifest_620.acf  libraryfolders.vdf
crates/overcrow-control/tests/fixtures/steam/secondary/steamapps/: appmanifest_1623730.acf
crates/overcrow-core/: Cargo.toml
crates/overcrow-core/src/: classifier.rs  event_log.rs  hwmon.rs  lib.rs  main.rs  manual_stopwatch.rs  procfs_source.rs  runtime.rs  service.rs  session.rs  session_tests.rs  shortcut.rs  shortcut_tests.rs  snapshot_signal.rs  telemetry.rs  telemetry_tests.rs  window.rs  x11.rs
crates/overcrow-core/tests/: manual_stopwatch.rs  review.rs  service.rs  window.rs
crates/overcrow-hyprland/: Cargo.toml
crates/overcrow-hyprland/src/: bridge.rs  geometry.rs  ipc.rs  lib.rs  main.rs  model.rs  reconcile.rs  shortcut.rs
crates/overcrow-logging/: Cargo.toml
crates/overcrow-overlay/: Cargo.toml
crates/overcrow-overlay/src/: app.rs  app_tests.rs  branding.rs  main.rs  placement.rs  preferences.rs  preferences_tests.rs  session_clock.rs
crates/overcrow-overlay/src/media/: client.rs  mod.rs  model.rs  mpris.rs  tests.rs
crates/overcrow-overlay/src/notes/: mod.rs  model.rs  service.rs  store.rs  tests.rs
crates/overcrow-overlay/src/runtime/: core_client.rs  core_client_tests.rs  latest.rs  latest_tests.rs  mod.rs  readiness.rs  readiness_tests.rs  scheduler.rs  scheduler_tests.rs  widget_diagnostics.rs
crates/overcrow-overlay/src/warframe/: activity_keys.rs  bounded_serde.rs  clipboard.rs  controller.rs  controller_tests.rs  derived.rs  derived_tests.rs  gate.rs  http.rs  labels.rs  locations.rs  mod.rs  model.rs  sanitize.rs
crates/overcrow-overlay/src/warframe/data/: factions.json  item_names.json  mission_types.json  sol_nodes.json  sortie_bosses.json  sortie_modifiers.json
crates/overcrow-overlay/src/warframe/market/: client.rs  mod.rs  model.rs  tests.rs
crates/overcrow-overlay/src/warframe/worldstate/: client.rs  live.rs  mod.rs  parse.rs  tests.rs
crates/overcrow-overlay/src/warframe/worldstate/fixtures/: minimal.json
crates/overcrow-overlay/src/widgets/: catalog.rs  chrome.rs  clock.rs  manual_stopwatch.rs  manual_stopwatch_tests.rs  media.rs  mod.rs  performance.rs  presentation_tests.rs  registry.rs  session.rs  warframe_fissures.rs  warframe_invasions.rs  warframe_market.rs  warframe_sortie.rs  warframe_status.rs  warframe_tests.rs
crates/overcrow-overlay/src/widgets/manager/: builtin.rs  layout.rs  mod.rs  tests.rs  warframe.rs
crates/overcrow-protocol/: Cargo.toml
crates/overcrowctl/: Cargo.toml
crates/overcrowctl/src/: main.rs
crates/overcrowctl/tests/: cli.rs
docs/: architecture.md  product-identity.md  troubleshooting.md
packaging/aur/: .SRCINFO  (+2 more)
scripts/: build-arch-package.sh  check-dependency-licenses.sh  diagnose.sh  generate-third-party-notices.sh  integrate-user.sh  prepare-release.sh
tests/: arch-pkgbuild-smoke.sh  aur-package-smoke.sh  build-arch-package-smoke.sh  ci-workflow-smoke.sh  diagnose-smoke.sh  entrypoint-disabled-smoke.sh  hyprland-config-smoke.sh  integrate-user-smoke.sh  kwin-bridge.test.js  license-tooling-smoke.sh  native-only-distribution-smoke.sh  public-docs-smoke.sh  public-license-policy-smoke.sh  qjsvalue-variant-smoke.cpp  qjsvalue-variant-smoke.sh  release-assembly-smoke.sh  release-inspection-smoke.sh  release-layout-scanner-errors-smoke.sh  release-layout-smoke.sh  release-preparation-smoke.sh  release-version-smoke.sh  systemd-units-smoke.sh
(+73 files in other folders)
