[workspace]
members = [
    "crates/overcrow-config",
    "crates/overcrow-control",
    "crates/overcrow-control-ui/src-tauri",
    "crates/overcrow-core",
    "crates/overcrow-hyprland",
    "crates/overcrow-logging",
    "crates/overcrow-overlay",
    "crates/overcrow-protocol",
    "crates/overcrowctl",
]
resolver = "3"

[workspace.package]
authors = ["Valhallab SASU"]
edition = "2024"
license = "AGPL-3.0-only"
publish = false
version = "0.1.0-pre-alpha.1"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
zbus = "5"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
