[package]
name = "overcrow-control"
autobins = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
keyvalues-parser = "=0.2.4"
libc = "0.2"
overcrow-config = { path = "../overcrow-config" }
overcrow-logging = { path = "../overcrow-logging" }
overcrow-protocol = { path = "../overcrow-protocol" }
pollster = "=0.4.0"
rfd = { version = "=0.17.2", default-features = false, features = ["xdg-portal"] }
sha2 = "=0.10.9"
serde.workspace = true
serde_json.workspace = true
unicode-casefold = "=0.2.0"
tokio.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile = "3"
