[package]
name = "overcrow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
futures-util = "0.3"
getrandom = "0.3"
overcrow-config = { path = "../overcrow-config" }
overcrow-logging = { path = "../overcrow-logging" }
overcrow-protocol = { path = "../overcrow-protocol" }
procfs = "0.18"
serde_json.workspace = true
tokio.workspace = true
x11rb = "=0.13.2"
zbus.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
