[package]
name = "overcrow-hyprland"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1"
overcrow-config = { path = "../overcrow-config" }
overcrow-logging = { path = "../overcrow-logging" }
overcrow-protocol = { path = "../overcrow-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true
