[package]
name = "overcrow-overlay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
arboard = "3"
chrono = "0.4.45"
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
futures-util = "0.3"
libc = "0.2"
overcrow-config = { path = "../overcrow-config" }
overcrow-logging = { path = "../overcrow-logging" }
overcrow-protocol = { path = "../overcrow-protocol" }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio.workspace = true
ureq = { version = "3", default-features = true, features = ["json"] }
url = "2.5"
zbus.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
